# eve

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS  CTestConfig.cmake  LICENSE.md  LLM_README.md  README.md  _2__w_2eve_2eve_2include_2eve_2traits_2as_translation_8hpp-example.html  algo_rationale.html  annotated.html  annotated_dup.js  appveyor.yml  changelog.html  classes.html  concepteve_1_1abelian__monoid.html  concepteve_1_1algo_1_1non__owning__range.html  concepteve_1_1arithmetic__scalar__value.html  concepteve_1_1arithmetic__value.html  concepteve_1_1callable.html  concepteve_1_1callable__object.html  concepteve_1_1combinable.html  concepteve_1_1combinable__to.html  concepteve_1_1conditional__expr.html  concepteve_1_1constant__callable.html  concepteve_1_1constant__entity.html  concepteve_1_1deferred__callable.html  concepteve_1_1elementwise__callable.html  concepteve_1_1elementwise__entity.html  concepteve_1_1floating__ordered__value.html  concepteve_1_1floating__scalar__value.html  concepteve_1_1floating__simd__value.html  concepteve_1_1floating__value.html  concepteve_1_1generator.html  concepteve_1_1generator__from.html  concepteve_1_1has__plain__translation.html  concepteve_1_1has__store__equivalent.html  concepteve_1_1integral__real__value.html  (+2056 more)
benchmarks/: CMakeLists.txt  bench_pch.cpp  benchmark.hpp  experiment.hpp  generators.hpp  metrics.hpp  nanobench.h
benchmarks/core/: fma.cpp
benchmarks/module/algorithm/: CMakeLists.txt
benchmarks/module/bessel/: CMakeLists.txt
benchmarks/module/combinatorial/: CMakeLists.txt
benchmarks/module/core/: CMakeLists.txt
benchmarks/module/math/: CMakeLists.txt
benchmarks/module/polynomial/: CMakeLists.txt
benchmarks/module/special/: CMakeLists.txt
benchmarks/ref/std/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  base.html  changelog.md  conf.py.in  custom.css  doxygen-awesome.css  doxystrap-footer.html  doxystrap-header.html  doxystrap.css  doxystrap.js  footer.html  fragment.js  glossary.md  godbolt.js  index.md  index.rst  layout.xml  page01_info.md  page01_install.md  page02_tutorial.md  page05_advanced_dev.md  page09_glossary.md  page09_internals.md  page09_licence.md  page09_rationale.md  page10_advanced_dev.md  page10_changelog.md  page10_licence.md  setup.md
doc/_static/css/: custom.css
doc/common/: conditional.else.hpp
doc/dev/: dev_cmake.md  dev_environment.md
doc/glossary/: properties.md  semantic.md
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: index.rst.txt
doc/html/_static/: basic.css  doctools.js  documentation_options.js  jquery.js  searchtools.js  underscore.js
doc/html/manual/: main.html
doc/html/start/: compilation.html  first.html  install.html
doc/info/: changelog.md  install.md  packages.md
doc/internals/: algo.md  design.md  dev_cmake.md  dev_environment.md  semantic.md
doc/manual/concepts/: general.rst  ieeevalue.rst  integralvalue.rst  logicalvalue.rst  targeted.rst  value.rst
doc/manual/constants/: false.rst  general.rst  inf.rst  minf.rst  mzero.rst  nan.rst  one.rst  smallestposval.rst  true.hpp  true.rst  zero.rst
doc/manual/features/: decorators.rst  general.rst  maskable.rst
doc/manual/functions/: add.rst  arithmetic.rst  bitwise.rst  conversion.rst  general.rst  operators.rst  predicate.rst  trigonometric.rst
doc/rationale/: design.md  semantic.md
doc/start/: compilation.rst  first.rst  install.rst
doc/tutorial/: advanced.md  basic.md  conditional.hpp  frequency-scaling.hpp  interacting-with-native-code.hpp  intro-02.hpp  introduction-01.hpp  introduction-02.hpp  introduction-03.hpp  introduction-04.hpp  introduction-06.hpp  introduction_01.hpp  mutli_arch.hpp  process.hpp  tutorial01_strlen.md  tutorial02_if_else.md
examples/: CMakeLists.txt  display.hpp  start_here.cpp  strlen.cpp
examples/multi-arch/: CMakeLists.txt  compute.cpp  kernel.cpp  main.cpp
examples/oop/: complex_numbers__declaring_an_object_type.cpp  complex_numbers_simple.cpp  data_driven_physics.cpp  ecs__evade_asteroids_example.cpp
examples/quick-start/: case_insensitive_equals.cpp  constant.cpp  sanity-check.cpp
examples/tutorial/: CMakeLists.txt  bound_sqrt.cpp  bound_sqrt_else.cpp  bound_sqrt_op.cpp  frequency_scaling.cpp  interacting_with_native.cpp  intro-01.cpp  intro-02.cpp  intro-03.cpp  intro-04.cpp  intro-05.cpp  load_between.cpp  load_ignore.cpp  load_ignore_both.cpp  mandelbrot.cpp  mandelbrot.inactive  process.cpp  safe_sqrt.cpp  safe_sqrt_between.cpp  safe_sqrt_else.cpp  safe_sqrt_ignore.cpp  safe_sqrt_ignore_both.cpp  safe_sqrt_op.cpp  scalar_cosine_similarity.cpp  scalar_quadratic.cpp  simd_cosine_similarity.cpp  simd_quadratic.cpp  sqrt_positive.cpp  sqrt_positive_else.cpp  sqrt_positive_op.cpp  square_or_diff.cpp
test/: CMakeLists.txt  doc_pch.cpp  driver.hpp  generator.hpp  measures.hpp  producers.hpp  std_proxy.hpp  test.hpp  test_dist.hpp  test_distribution.hpp  test_pch.cpp  types.hpp  vec3.hpp
test/doc/: .#CMakeLists.txt  CMakeLists.txt  abs.cpp  abs.txt  acos.cpp  acos.txt  acosd.cpp  acosd.txt  acot.cpp  acot.txt  acotd.txt  acsc.cpp  acsc.txt  acscd.txt  add.cpp  add.txt  any.cpp  arg.cpp  arg.txt  asec.txt  asecd.cpp  asecd.txt  asin.txt  asind.txt  atan.cpp  atan.txt  atan2.cpp  atan2.txt  atan2d.txt  atan2pi.cpp  atand.txt  atanpi.cpp  average.cpp  average.txt  binarize.cpp  binarize.txt  bitofsign.cpp  bitofsign.txt  bitwise_and.cpp  bitwise_and.txt  (+226 more)
test/exhaustive/: CMakeLists.txt
test/integration/: CMakeLists.txt  main.cpp
test/random/: CMakeLists.txt
test/tmp_boost/: boost_math_cospi.hpp
test/tts/: ranges.hpp  tts.hpp
test/unit/: CMakeLists.txt
validation/: CMakeLists.txt
validation/arch/: CMakeLists.txt  current_api.cpp  expected_cardinal.cpp  is_supported.cpp  main.cpp
validation/meta/: CMakeLists.txt  as_floating_point.cpp  as_integer.cpp  as_wide.cpp  cardinal.cpp  decorator.cpp  element_type.cpp  has_abi.cpp  native_simd_for_abi.cpp  rebindable.cpp  sign_of.cpp  value.cpp
(+33663 files in other folders)
