##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright 2018-2021 Joel FALCOU
##  Copyright 2018-2021 Jean-Thierry LAPRESTE
##
##  Licensed under the MIT License <http://opensource.org/licenses/MIT>.
##  SPDX-License-Identifier: MIT
##==================================================================================================
include(benchmark)

add_subdirectory(module/algorithm)
add_subdirectory(module/core)
add_subdirectory(module/math)
add_subdirectory(module/special)
add_subdirectory(module/combinatorial)
