##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright 2018-2020 Joel FALCOU
##  Copyright 2018-2020 Jean-Thierry LAPRESTE
##
##  Licensed under the MIT License <http://opensource.org/licenses/MIT>.
##  SPDX-License-Identifier: MIT
##==================================================================================================
include(CTest)
include(config/dependencies)
include(test)

# add_subdirectory(doc)
# add_subdirectory(exhaustive)

# if( EVE_BUILD_RANDOM )
#   add_subdirectory(random)
# endif()

# add_subdirectory(unit)
