##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright 2018-2020 Joel FALCOU
##  Copyright 2018-2020 Jean-Thierry LAPRESTE
##
##  Licensed under the MIT License <http://opensource.org/licenses/MIT>.
##  SPDX-License-Identifier: MIT
##==================================================================================================
include (validation)

# add_subdirectory(api)
add_subdirectory(arch)
# add_subdirectory(internals)
add_subdirectory(meta)
# add_subdirectory(module)
