##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: MIT
##==================================================================================================

add_subdirectory(bessel)
add_subdirectory(combinatorial)
add_subdirectory(polynomial)
add_subdirectory(proba)
add_subdirectory(special)

add_subdirectory(core)
add_subdirectory(diff)
add_subdirectory(traits)
