##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: MIT
##==================================================================================================

add_subdirectory(ad)
add_subdirectory(bessel)
add_subdirectory(combinatorial)
add_subdirectory(elliptic)
add_subdirectory(math)
add_subdirectory(polynomial)
add_subdirectory(proba)
add_subdirectory(special)

add_subdirectory(core)
add_subdirectory(traits)
