##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================

add_subdirectory(algo)
add_subdirectory(bessel)
add_subdirectory(combinatorial)
add_subdirectory(elliptic)
add_subdirectory(math)
add_subdirectory(polynomial)
add_subdirectory(proba)
add_subdirectory(special)

add_subdirectory(core)
add_subdirectory(traits)
