##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright 2018 Joel FALCOU
##
##  Licensed under the MIT License <http://opensource.org/licenses/MIT>.
##  SPDX-License-Identifier: MIT
##==================================================================================================

add_subdirectory(arch)
add_subdirectory(api)
add_subdirectory(internals)
add_subdirectory(module)
add_subdirectory(internals)
add_subdirectory(meta)
