##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0-1.0
##==================================================================================================
add_subdirectory(algo)
add_subdirectory(api)
add_subdirectory(arch)
add_subdirectory(internals)
add_subdirectory(memory)
add_subdirectory(meta)
add_subdirectory(module)
add_subdirectory(views)
