##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================

add_subdirectory(constant)
add_subdirectory(fuzzy)
add_subdirectory(masked)
add_subdirectory(raw)
add_subdirectory(regular)
add_subdirectory(saturated)
