##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Project Contributors
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================

add_subdirectory(constant)
add_subdirectory(fuzzy)
add_subdirectory(masked)
add_subdirectory(raw)
add_subdirectory(regular)
add_subdirectory(saturated)
add_subdirectory(pedantic)
add_subdirectory(roundings)
