##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================

add_subdirectory(regular)
add_subdirectory(successor)
add_subdirectory(kind)
add_subdirectory(condon_shortley)
add_subdirectory(sph)
