##==================================================================================================
##  EVE - Expressive Vector Engine
##  Copyright : EVE Contributors & Maintainers
##  SPDX-License-Identifier: BSL-1.0
##==================================================================================================

add_subdirectory(pedantic)
add_subdirectory(raw)
add_subdirectory(regular)
